--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -4,13 +4,14 @@
 <head>
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-  <link rel="stylesheet" href="style.scss">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vite + Vue</title>
+  <title></title>
 </head>
 
 <body>
-  <div id="app"></div>
+  <div id="app">
+
+  </div>
   <script type="module" src="/src/main.js"></script>
 </body>
 
